--- a/Views/template/css/estilo.css
+++ b/Views/template/css/estilo.css
@@ -2,8 +2,18 @@
 * {
     padding: 0;
     margin: 0;
+    height: auto;
     box-sizing: border-box;
     scroll-behavior: smooth;
+}
+
+footer {
+  height: auto;
+	background-color: #EEE;
+	border-top: 10px solid #BBB;
+	font-size: 14px;
+	padding: 10px;
+	text-align: center;
 }
 
 .loading {
@@ -14,53 +24,61 @@
     background-color: black;
     opacity: 0.7;
 }
-  .loading div {
-    position: absolute;
-    top: 50%;
-    margin-left: 50%;
-    width: 13px;
-    height: 13px;
-    border-radius: 50%;
-    background: #fff;
-    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+
+.loading div {
+  position: absolute;
+  top: 50%;
+  margin-left: 50%;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: #fff;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+
+.loading div:nth-child(1) {
+  left: 8px;
+  animation: loading1 0.6s infinite;
+}
+
+.loading div:nth-child(2) {
+  left: 8px;
+  animation: loading2 0.6s infinite;
+}
+
+.loading div:nth-child(3) {
+  left: 32px;
+  animation: loading2 0.6s infinite;
+}
+
+.loading div:nth-child(4) {
+  left: 56px;
+  animation: loading3 0.6s infinite;
+}
+
+@keyframes loading1 {
+  0% {
+    transform: scale(0);
   }
-  .loading div:nth-child(1) {
-    left: 8px;
-    animation: loading1 0.6s infinite;
+  100% {
+    transform: scale(1);
   }
-  .loading div:nth-child(2) {
-    left: 8px;
-    animation: loading2 0.6s infinite;
+}
+
+@keyframes loading3 {
+  0% {
+    transform: scale(1);
   }
-  .loading div:nth-child(3) {
-    left: 32px;
-    animation: loading2 0.6s infinite;
+  100% {
+    transform: scale(0);
   }
-  .loading div:nth-child(4) {
-    left: 56px;
-    animation: loading3 0.6s infinite;
+}
+
+@keyframes loading2 {
+  0% {
+    transform: translate(0, 0);
   }
-  @keyframes loading1 {
-    0% {
-      transform: scale(0);
-    }
-    100% {
-      transform: scale(1);
-    }
+  100% {
+    transform: translate(24px, 0);
   }
-  @keyframes loading3 {
-    0% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(0);
-    }
-  }
-  @keyframes loading2 {
-    0% {
-      transform: translate(0, 0);
-    }
-    100% {
-      transform: translate(24px, 0);
-    }
-  }
+}
